--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.3.0
   http: ^1.4.0
   transparent_image: ^2.0.1
+  animated_gradient: ^0.0.3
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
